# arch-rebuild-order

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md
doc/: arch-rebuild-order.md
src/: args.rs  error.rs  lib.rs  main.rs
tests/: fixtures.rs  test_rebuilder.rs
