[package]
name = "arch-rebuild-order"
version = "0.1.0"
authors = ["Jelle van der Waa <jelle@archlinux.org>"]
edition = "2021"
description = "A CLI tool to determine the rebuild order of provided package(s)."
documentation = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
readme = "README.md"
homepage = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
repository = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
license-file = "LICENSE"
keywords = ["archlinux", "build", "alpm"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-rebuild-order"

[dependencies]
alpm = "2.0.4"
petgraph = "0.5.1"
structopt = "0.3.21"
thiserror = "1.0.25"
anyhow = "1.0.40"

[dev-dependencies]
rstest = "0.10.0"
tar = "0.4.35"
tempfile = "3.2.0"


[profile.release]
lto = true
codegen-units = 1
