[package]
name = "arch-rebuild-order"
version = "0.1.0"
authors = ["Jelle van der Waa <jelle@archlinux.org>"]
edition = "2021"
description = "A CLI tool to determine the rebuild order of provided package(s)."
documentation = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
readme = "README.md"
homepage = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
repository = "https://gitlab.archlinux.org/archlinux/arch-rebuild-order"
license-file = "LICENSE"
keywords = ["archlinux", "build", "alpm"]
categories = ["command-line-utilities"]
publish = false
default-run = "arch-rebuild-order"

[dependencies]
alpm = "2.2.1"
petgraph = "0.6.0"
clap = { version = "4", features = ["derive"] }
thiserror = "1.0.30"
anyhow = "1.0.52"
clap_complete = "4.0.7"

[dev-dependencies]
rstest = "0.12.0"
tar = "0.4.38"
tempfile = "3.3.0"


[profile.release]
lto = true
codegen-units = 1
